2008-10-16  kitone  <kitone@gna.org>

	* src/utility.cc:
	Fix: change async to sync spawn_command.

2008-10-13  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2008-10-13  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.25.0 release.

2008-10-13  kitone  <kitone@gna.org>

	* src/SubtitleFormat.cc:
	* src/formats/SubtitleEditorProject.h:
	* src/formats/TimedTextAuthoringFormat1.h:
	Spelling fixes by Luboš Staněk.

2008-10-12  kitone  <kitone@gna.org>

	* src/actions/errorchecking/ErrorCheckingPlugin.cc:
	Fix: Error Checking fix with command recorder.
	Fix: active list (By Subtitles).

2008-10-08  kitone  <kitone@gna.org>

	* src/formats/MicroDVD.h:
	Restore tag conversion.

2008-10-07  kitone  <kitone@gna.org>

	* src/actions/DocumentManagement.cc:
	Comment the line set_show_not_found. (freeze the ui)

2008-10-07  kitone  <kitone@gna.org>

	* src/SubtitleView.cc:
	* src/SubtitleView.h:
	Fix column title and alignment.
	Clean code.

2008-10-07  kitone  <kitone@gna.org>

	* src/actions/DocumentManagement.cc:
	Change add_filter to set_filter. (Recent code)

2008-10-07  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/SubtitleFormatSystem.cc:
	* src/formats/TimedText.h:
	* src/formats/TimedTextAuthoringFormat1.h:
	Rename TimedText to TimedTextAuthoringFormat1.

2008-10-07  kitone  <kitone@gna.org>

	* src/Options.cc:
	* src/Options.h:
	* src/debug.cc:
	* src/debug.h:
	* src/main.cc:
	Add option --enable-profiling.

2008-10-07  kitone  <kitone@gna.org>

	* src/utility.cc:
	* src/utility.h:
	Remove deprecated function.

2008-10-06  kitone  <kitone@gna.org>

	* share/glade/dialog-error-checking-preferences.glade:
	* share/glade/dialog-preferences.glade:
	Fix: min timing value.

2008-10-06  kitone  <kitone@gna.org>

	* src/Subtitle.cc:
	* src/actions/errorchecking/TooLongDisplayTime.h:
	* src/actions/errorchecking/TooShortDisplayTime.h:
	* src/utility.cc:
	* src/utility.h: